Cau hinh trien khai cac API co ban cho Doctor